k8s/app/templates/pushgateway/pushgateway-depoly.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pushgateway
  name: pushgateway
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pushgateway
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: pushgateway
    spec:
      containers:
      - image: prom/pushgateway
        name: pushgateway
        imagePullPolicy: IfNotPresent
