k8s/app/templates/pushgateway/pushgateway-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pushgateway
  name: pushgateway
  namespace: monitoring
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 9091
  selector:
    app: pushgateway
