k8s/app/templates/pushgateway/pushgateway-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pushgateway-ing
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: pushgateway.naren.com 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pushgateway
            port:
              number: 80
